PageContainer handles out of bounds pages correctly

--- a/src/css/_BRpages.scss
+++ b/src/css/_BRpages.scss
@@ -13,6 +13,9 @@
 .BRmodeThumb .BRpagecontainer, .BRmode2Up .BRpagecontainer {
   cursor: pointer;
 }
+.BRpagecontainer.BRemptypage {
+  cursor: unset;
+}
 
 .BRpagecontainer {
   position: relative;
